@@ -261,6 +261,7 @@ class grocery_Model  extends CI_Model  {
     		}
     		$db_field_types[$db_field_type->Field]['db_max_length'] = $length;
     		$db_field_types[$db_field_type->Field]['db_type'] = $db_type;
+    		$db_field_types[$db_field_type->Field]['db_null'] = $db_field_type->Null == 'YES' ? true : false;
     		$db_field_types[$db_field_type->Field]['db_extra'] = $db_field_type->Extra;
     	}
     	
